Death chart tooltip spacing fix, coloring

--- a/app/stylus/widgets/tooltip.styl
+++ b/app/stylus/widgets/tooltip.styl
@@ -32,10 +32,10 @@
         position absolute
         display block
         width 4px
-        height 205px
+        height 235px
         left 50%
         margin-left -2px
-        top 135px
+        top 105px
         background rgba(0, 0, 0, 0.2)
     p
         overflow hidden
